--- a/urban-innovations_contact.css
+++ b/urban-innovations_contact.css
@@ -17,7 +17,8 @@ body{
 	background-color: #000;
 	padding: 0px;
 	position: relative;
-	height: 880px;
+	min-height: 880px;
+	height: auto;
 	width: 1024px;
 	margin: 0px auto;
 }
@@ -36,7 +37,8 @@ body{
 	background-image: url(images/bkgd_ctr_cnct.png);
 	background-repeat: no-repeat;
 	padding: 0px;
-	height: 241px;
+	min-height: 241px;
+	height: auto;
 	width: 1024px;
 	margin-top: 0px;
 	margin-right: auto;
@@ -117,7 +119,7 @@ body{
 }
 #cnctcall {
 	margin: 0px;
-	height: 80px;
+	min-height: 80px;
 	width: 240px;
 	position: absolute;
 	z-index: 10;
@@ -129,6 +131,11 @@ body{
 	color: #888;
 	text-decoration: none;
 	text-align: left;
+}
+.cnct-phone-row {
+	margin-top: 10px;
+	display: block;
+	line-height: 18px;
 }
 #cnctlink {
 	margin: 0px;
